[project]
name = "openseespy-zh-totorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "nbformat>=4.2.0",
    "numpy>=2.2.3",
    "openseespy>=3.5.1.3",
    "opstool>=1.0.0",
    "pydoe>=0.3.8",
    "rich>=13.9.4",
]
